BUG: SDP: footer overlaps metadata tab fixed. Also a couple of minor IE6 fixes.
QA: http://www.pivotaltracker.com/story/show/973083

--- a/public/stylesheets/external-widget-meta.css
+++ b/public/stylesheets/external-widget-meta.css
@@ -1,7 +1,5 @@
 #widgetMeta
 {
-    /*  This height corresponds to a value in the javascript for when the meta section
-        collapses. If this value changes, also change the value in info-pane.js */
     height: 62px;
     margin: 0;
     min-width: 30em;
@@ -13,6 +11,7 @@
     height: 100%;
     overflow: auto;
     width: 100%;
+    z-index: 30;
 }
 
 #widgetMeta .header
